--- a/app/views/memos/confirm.html.erb
+++ b/app/views/memos/confirm.html.erb
@@ -12,7 +12,7 @@
           <br>
           <br>
           <div class="badge badge-error badge-outline badge-lg w-full max-w-xs">
-          <%= @memo.emotion == "happy" ? "嬉しかったこと・いいね" : @memo.emotion %>
+          <%= emotion_label(@memo.emotion) %>
           </div>
           <%= f.hidden_field :emotion, value: @memo.emotion %>
 
