add: 感情別のタブ

--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -7,7 +7,8 @@
       <button class="btn btn-outline btn-success" onclick="my_modal_3.showModal()">書き方例</button>
       <%#= render "example" %> <!-- 書き方例モーダル -->
       <br><br><br>
-      <%= render "form", memo: @memo, form_url: confirm_memos_path %> <!-- メモ入力フォーム -->
+      <%= render "tabs" %> <!-- 感情別タブ -->
+      <br><br>
     </div>
   </div>
 </div>
