--- a/app/views/memos/_tabs.html.erb
+++ b/app/views/memos/_tabs.html.erb
@@ -1,31 +1,10 @@
-<!-- タブ：嬉しかったこと -->
+<!-- タブ：感情一覧 -->
 <div role="tablist" class="tabs tabs-lifted">
-  <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="喜" checked="checked" />
-  <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
-    <%= render "memos/tabs/happy" %>
-  </div>
-
-<!-- タブ：怒ったこと -->
-  <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="怒" />
-  <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
-    <%= render "memos/tabs/angry" %>
-  </div>
-
-<!-- タブ：悲しかったこと -->
-  <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="哀" />
-  <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
-    <%= render "memos/tabs/sad", emotion: :sad %>
-  </div>
-
-<!-- タブ：楽しかったこと -->
-  <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="楽" />
-  <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
-    <%= render "memos/tabs/funny" %>
-  </div>
-
-<!-- タブ：その他 -->
-  <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="その他" />
-  <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
-    <%= render "memos/tabs/other" %>
-  </div>
+  <% emotions = { happy: "喜", angry: "怒", sad: "哀", funny: "楽", other: "その他" } %>
+  <% emotions.each do |emotion, label| %>
+    <input type="radio" name="my_tabs_2" role="tab" class="tab" aria-label="<%= label %>" <%= 'checked="checked"' if emotion == :happy %> />
+    <div role="tabpanel" class="tab-content bg-base-100 border-base-300 rounded-box p-6">
+      <%= render "emotion_form", emotion: emotion %>
+    </div>
+  <% end %>
 </div>
