refactor: フォームに渡す各感情のファイルを統一

--- a/app/views/memos/_emotion_form.html.erb
+++ b/app/views/memos/_emotion_form.html.erb
@@ -1,2 +1,3 @@
-<% @memo.emotion = "happy" %>
+<!-- メモ入力フォームの各感情 -->
+<% @memo.emotion = emotion %>
 <%= render "form", memo: @memo, form_url: confirm_memos_path %> <!-- メモ入力フォーム -->
