--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,19 +1,18 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
-      <p class="mt-6 text-lg leading-8 text-gray-600">
-        その日の出来事を一言で記録し、なぜそう感じたかを深掘りすることで<br>
-        思考を整理するアプリです。<br>
-        <br>
-        「なぜ？」「どこが？」と具体的に問いかけることで、思考の明確化を促します。<br>
-        <br><br>
-        思考整理を習慣化して、自分の新しい価値観に気付いてみませんか？
-      </p>
+      <% content_for :title, t('.title') %><br>
+
+      <div class="mt-6 text-lg leading-8 text-gray-600">
+        <!-- アプリ説明文 -->
+        <%= simple_format(t('.introduction')) %>
+      </div>
       <br><br>
-      <% if current_user.nil? %>
+      <% if current_user.nil? %> <!-- ログインしていない場合に表示 -->
       <br>
+        <!-- 登録なしで使ってみる -->
         <%= form_with url: guest_login_path, method: :post, local: true do |f| %>
-          <%= f.button "登録なしで使ってみる", class: "btn btn-success" %>
+          <%= f.button t('.guest_login'), class: "btn btn-success" %>
         <% end %>
         <br>
         <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
@@ -23,31 +22,34 @@
             <%= image_tag "web_light_sq_SI.svg", alt: "Sign in with Google", class: "google-button" %>
           <% end %>
 
-          <br><div class="divider text-gray-500 text-sm">または</div><br>
+          <!-- または -->
+          <br><div class="divider text-gray-500 text-sm"><%= t('.or') %></div><br>
 
           <%= form_with url: login_path, method: :post, local: true do |f| %>
-            <%= f.label :email, "メールアドレス", class: "label" %>
+            <%= f.label :email, t('.email'), class: "label" %>
             <%= f.email_field :email, placeholder: "memosprout@example.com", class: "input input-bordered w-full max-w-xs" %>
             <br>
             <br>
-            <%= f.label :password, "パスワード", class: "label" %>
+            <%= f.label :password, t('.password'), class: "label" %>
             <%= f.password_field :password, class: "input input-bordered w-full max-w-xs" %>
             <br><br>
             <div class="tooltip" data-tip="アップデートをお待ちください">
-              <%= link_to "パスワードをお忘れの方はこちら", "#", class: "btn btn-link" %>
+              <!-- パスワードをお忘れの方はこちら -->
+              <%= link_to t('.Forgot password?'), "#", class: "btn btn-link" %>
             </div>
             <br><br>
-            <%= submit_tag "　　ログイン　　", class: "btn btn-warning" %>
+            <%= submit_tag t('.login'), class: "btn btn-warning" %>
           <% end %>
           <br><br>
-          <%= link_to "新規登録ページへ", new_user_path, class: "btn btn-error" %>
+          <%= link_to t('.sign_up'), new_user_path, class: "btn btn-error" %>
           <br><br>
         </div>
       <% end %>
       <br>
       <br>
       <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
-        このアプリでできること
+        <!-- このアプリでできること -->
+        <%= t('.description') %>
         <br>
         <br>
         <div class="carousel carousel-center bg-neutral rounded-box max-w-md space-x-4 p-4 w-96 ">
@@ -62,7 +64,8 @@
                 <h2 class="card-title">①</h2>
                 <p>
                   <br><br>
-                    一言ずつの入力で思考を整理！
+                    <!--  その日の出来事を…深掘りします。 -->
+                    <%= simple_format(t('.description_1')) %>
                   <br><br>
                   <p><div align="right">※ スライド  →</div></p>
                   <br><br>
@@ -82,7 +85,8 @@
                 <h2 class="card-title">②</h2>
                 <p>
                   <br><br>
-                    自然と文章にする力が鍛えられる！
+                    <!--  なぜそのように感じたのか…整理します。 -->
+                    <%= simple_format(t('.description_2')) %>
                   <br><br><br>
                 </p>
               </div>
@@ -100,11 +104,8 @@
                 <h2 class="card-title">③</h2>
                 <p>
                   <br><br>
-                    アップデート予定<br><br>
-                    ・使い方ページ<br>
-                    ・google認証機能<br>
-                    ・[喜]以外の感情[怒][哀][楽]に対応<br><br>
-                    など<br>
+                    <!--  その日の出来事を…見つめ直しましょう。 -->
+                    <%= simple_format(t('.description_3')) %>
                   <br><br><br>
                 </p>
               </div>
