--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="footer footer-center bg-base-200 text-base-content rounded p-10">
   <nav class="grid grid-flow-col gap-4">
-    <a class="link link-hover">利用規約</a>
-    <a class="link link-hover">プライバシーポリシー</a>
-    <%= link_to "お問い合わせ", "https://forms.gle/B8L13hSeEwb19WFX8", class: "link link-hover" %>
+    <a class="link link-hover"><%= t('shared._footer.terms') %></a>
+    <a class="link link-hover"><%= t('shared._footer.privacy') %></a>
+    <%= link_to t('shared._footer.contact'), "https://forms.gle/B8L13hSeEwb19WFX8", class: "link link-hover" %>
   </nav>
   <aside>
     <p>© 2024. Memo Sprout</p>
