--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,17 +7,19 @@
         <%= image_tag 'logo.png', alt: "Memo Sprout logo", class: "h-14 w-auto object-contain" %>
       <% end %>
 
-      <!-- サブタイトル（モバイル非表示） -->
-      <h2 class="text-sm leading-8 text-gray-900 whitespace-nowrap hidden sm:block">- 記録して振り返り、思考を育てる -</h2>
+      <!-- 記録して振り返り、思考を育てる（モバイル非表示） -->
+      <h2 class="text-sm leading-8 text-gray-900 whitespace-nowrap hidden sm:block">- <%= t('shared._header.catchphrase') %> -</h2>
     </div>
     <div class="flex-none  ml-auto">
       <h2 class="text-error text-sm leading-8 p-3">
-        <%= logged_in? && current_user.email.start_with?("guest_") ? "ゲストログイン中" : "ログイン中" %>
+        <!-- ゲストログイン中 : ログイン中 -->
+        <%= logged_in? && current_user.email.start_with?("guest_") ? t('shared._header.guest_logged_in') : t('shared._header.logged_in') %>
       </h2>
       <ul class="menu menu-horizontal px-1">
         <li>
           <%= link_to new_memo_path do %>
-            <i class="fa-solid fa-plus"></i>メモ作成
+            <!-- メモ作成 -->
+            <i class="fa-solid fa-plus"></i><%= t('shared._header.create_memo') %>
           <% end %>
         </li>
         <li>
@@ -25,21 +27,26 @@
             <summary>Menu</summary>
             <ul class="bg-base-100 rounded-t-none p-2 w-44 min-w-max absolute right-0">
               <li>
-                <%= link_to "メモ一覧", memos_path %>
+                <!-- メモ一覧 -->
+                <%= link_to t('shared._header.memo_list'), memos_path %>
               </li>
               <li>
-                <a onclick="my_modal_3.showModal()">使い方</a> <!-- モーダルを開くリンク -->
+                <!-- 使い方 -->
+                <a onclick="my_modal_3.showModal()"><%= t('shared._header.how_to_use') %></a> <!-- モーダルを開くリンク -->
               </li>
               <li>
-                <%= link_to "お気に入り一覧", memo_favorites_path %>
+                <!-- お気に入り -->
+                <%= link_to t('shared._header.favorite'), memo_favorites_path %>
               </li>
               <li>
                 <%= link_to "https://twitter.com/intent/tweet?text=#{CGI.escape("一言ずつの入力で出来事を掘り下げてみよう🌱\n#{root_url}\n#MemoSprout")}", target: "_blank", rel: "noopener noreferrer" do %>
-                  アプリをシェア<i class="fa-brands fa-x-twitter"></i>
+                  <!-- アプリをシェア -->
+                  <%= t('shared._header_before_login.share_app') %><i class="fa-brands fa-x-twitter"></i>
                 <% end %>
               </li>
               <li>
-                <%= link_to "ログアウト", logout_path, data: { turbo_method: :delete } %>
+                <!-- ログアウト -->
+                <%= link_to t('shared._header.logout'), logout_path, data: { turbo_method: :delete } %>
               </li>
             </ul>
           </details>
