--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -7,32 +7,36 @@
         <%= image_tag 'logo.png', alt: "Memo Sprout logo", class: "h-14 w-auto object-contain" %>
       <% end %>
 
-      <!-- サブタイトル（モバイル非表示） -->
-      <h2 class="text-sm leading-8 text-gray-900 whitespace-nowrap hidden sm:block">- 記録して振り返り、思考を育てる -</h2>
+      <!-- 記録して振り返り、思考を育てる（モバイル非表示） -->
+      <h2 class="text-sm leading-8 text-gray-900 whitespace-nowrap hidden sm:block">- <%= t('shared._header_before_login.catchphrase') %> -</h2>
     </div>
     <div class="flex-none  ml-auto">
       <ul class="menu menu-horizontal px-1">
-        <li><%= link_to "ログイン（TOPページへ)", "/" %></li>
+        <li><%= link_to t('shared._header_before_login.login'), "/" %></li>
         <li>
           <details class="relative"> <!-- relative：子要素の絶対位置を指定 -->
             <summary>Menu</summary>
           <ul class="bg-base-100 rounded-t-none p-2 w-44 min-w-max absolute right-0">
               <li>
                 <div class="tooltip tooltip-left" data-tip="ログイン後に使える機能です">
-                  <a>メモ一覧</a>
+                  <!-- メモ一覧 -->
+                  <a><%= t('shared._header_before_login.memo_list') %></a>
                 </div>
               </li>
               <li>
-                <a onclick="my_modal_3.showModal()">使い方</a> <!-- モーダルを開くリンク -->
+                <!-- 使い方 -->
+                <a onclick="my_modal_3.showModal()"><%= t('shared._header_before_login.how_to_use') %></a> <!-- モーダルを開くリンク -->
               </li>
               <li>
                 <div class="tooltip tooltip-left" data-tip="ログイン後に使える機能です">
-                  <a>お気に入り一覧</a>
+                  <!-- お気に入り -->
+                  <a><%= t('shared._header_before_login.favorite') %></a>
                 </div>
               </li>
               <li>
                 <%= link_to "https://twitter.com/intent/tweet?text=#{CGI.escape("一言ずつの入力で出来事を掘り下げてみよう🌱\n#{root_url}\n#MemoSprout")}", target: "_blank", rel: "noopener noreferrer" do %>
-                  アプリをシェア<i class="fa-brands fa-x-twitter"></i>
+                  <!-- アプリをシェア -->
+                  <%= t('shared._header_before_login.share_app') %><i class="fa-brands fa-x-twitter"></i>
                 <% end %>
               </li>
             </ul>
@@ -41,5 +45,5 @@
       </ul>
     </div>
   </div>
-<%= render "memos/example" %>
+<%= render "memos/example" %> <!-- 使い方モーダル -->
 </header>
