--- a/app/views/memos/_count_memos.html.erb
+++ b/app/views/memos/_count_memos.html.erb
@@ -1,24 +1,39 @@
 <!-- 呼び出し元は memos#index-->
 <div id="count_memos">
   <br>
-  累計メモ数　<%= @total_memos %>件<br><br>
-  連続記録 <button onclick="my_modal_2.showModal()"><i class="fa-regular fa-circle-question"></i></button>
-<dialog id="my_modal_2" class="modal">
-  <div class="modal-box">
-    <h3 class="text-lg font-bold">連続記録について</h3>
-      <p class="py-4">記録は「実際の作成日」でカウントされます。<br>
-      メモ作成時に選んだ日付は影響しません。<br><br>
-      毎日1回、記録を作成して連続記録を目指しましょう！
+  <!-- 累計メモ数-->
+  <%= t('memos._count_memos.total_memos') %>　<%= @total_memos %>件<br><br>
+
+  <!-- 連続記録日数-->
+  <%= t('memos._count_memos.streak_days') %>
+
+  <!-- モーダル -->
+  <button onclick="my_modal_2.showModal()">
+    <i class="fa-regular fa-circle-question"></i>
+  </button>
+  <dialog id="my_modal_2" class="modal">
+    <div class="modal-box">
+
+      <!-- 「連続記録日数について」 -->
+      <h3 class="text-lg font-bold">
+        <%= t('memos._count_memos.note') %>
+      </h3>
+      <p class="py-4">
+        <!-- 説明文（「記録は「実際の作成日」でカウントされます…」） -->
+        <%= simple_format(t('memos._count_memos.description')) %>
       </p>
-  </div>
-  <form method="dialog" class="modal-backdrop">
-    <button>close</button>
-  </form>
-</dialog>　<%= @streak_days %>日<br>
-  <% if @today_memo %> <!-- 今日のメモがあるか -->
-    （今日の記録はカウントされています✨）
+    </div>
+    <form method="dialog" class="modal-backdrop">
+      <button>close</button>
+    </form>
+  </dialog>　<%= @streak_days %>日<br>
+
+  <% if @today_memo %>
+    <!-- 「今日の記録はカウントされています」 -->
+    （<%= t('memos._count_memos.with_count') %>）
   <% else %>
-    （今日の記録はまだありません。記録更新を目指しましょう！）</span>
+    <!-- 「今日の記録はまだありません。記録更新を目指しましょう！」 -->
+    （<%= t('memos._count_memos.no_count') %>）
   <% end %>
-  <br>
+  <br><br><br>
 </div>
