--- a/app/views/memos/_example.html.erb
+++ b/app/views/memos/_example.html.erb
@@ -5,82 +5,96 @@
     <div class="flex flex-wrap md:flex-nowrap"><!-- 子要素を横並びに配置。flex-wrapにより、画面が狭い時には要素が折り返すが、
                                                     md:flex-nowrapで中サイズ以上の画面では折り返さずに横並びに -->
 
-    <!-- 左側モックアップ -->
-    <div class="mockup-window border-base-300 border w-full md:w-2/3">
-      <div class="border-base-300 flex justify-center border-t px-4">
-        <div class="bg-white py-8 w-full text-center" style="transform: scale(0.95);">
-          
-          <% content_for :title, "メモ作成" %>
-          <% parsed_content = JSON.parse(memo_example) rescue {} %>
-          
-          <p>どんなことがありましたか？</p>
-          
-          <%= form_with url: '#', data: { turbo: false } do |f| %>
-            <%= f.select :emotion, emotion_options, { selected: "happy" }, class: "select select-error sm:w-[60%]" %>
+      <!-- 左側モックアップ -->
+      <div class="mockup-window border-base-300 border w-full md:w-2/3">
+        <div class="border-base-300 flex justify-center border-t px-4">
+          <div class="bg-white py-8 w-full text-center" style="transform: scale(0.95);">
+
+            <% parsed_content = JSON.parse(memo_example) rescue {} %>
             
-            <br><br>
-            <p>いつ（When）</p>
-            <%= f.date_field :date, value: Date.today, class: "input input-bordered w-[60%]" %>
+            <p>どんなことがありましたか？</p>
             
-            <br><br>
-            <%= f.fields_for :memo_content do |key| %>
-              何（What）(*)<br><p class="text-gray-400">どんなことが嬉しかったの？</p>
-              <%= key.text_area "what", value: parsed_content["what"], class: "input input-bordered w-[60%]" %>
+            <%= form_with url: '#', data: { turbo: false } do |f| %>
+              <%= f.select :emotion, emotion_options, { selected: "happy" }, class: "select select-error sm:w-[60%]" %>
               
               <br><br>
-              なぜ(Why)(*)<br><p class="text-gray-400">どうして嬉しかったの？</p>
-              <%= key.text_area "why", value: parsed_content["why"], class: "input input-bordered w-[60%]" %>
+              <p>いつ（When）</p>
+              <%= f.date_field :date, value: Date.today, class: "input input-bordered w-[60%]" %>
               
               <br><br>
-              なぜをもっと深掘り(*)<br><p class="text-gray-400">具体的にはそれのどんなところが？</p>
-              <%= key.text_area "why_more", value: parsed_content["why_more"], class: "input input-bordered w-[60%]" %>
+              <%= f.fields_for :memo_content do |key| %>
+                何（What）(*)<br><p class="text-gray-400">どんなことが嬉しかったの？</p>
+                <%= key.text_area "what", value: parsed_content["what"], class: "input input-bordered w-[60%]" %>
+                
+                <br><br>
+                なぜ(Why)(*)<br><p class="text-gray-400">どうして嬉しかったの？</p>
+                <%= key.text_area "why", value: parsed_content["why"], class: "input input-bordered w-[60%]" %>
+                
+                <br><br>
+                なぜをもっと深掘り(*)<br><p class="text-gray-400">具体的にはそれのどんなところが？</p>
+                <%= key.text_area "why_more", value: parsed_content["why_more"], class: "input input-bordered w-[60%]" %>
+                
+                <br><br>
+                どのように(How)(*)<br><p class="text-gray-400">どうやって実現したの？何かアクションをした？</p>
+                <%= key.text_area "how", value: parsed_content["how"], class: "input input-bordered w-[60%]" %>
+                
+                <br><br>
+                まとめ・気付き(*)<br><p class="text-gray-400">自分の言葉で書き出してみよう</p>
+                <%= key.text_area "summary", value: parsed_content["summary"], class: "input input-bordered h-40 w-[60%]" %>
+              <% end %>
               
               <br><br>
-              どのように(How)(*)<br><p class="text-gray-400">どうやって実現したの？何かアクションをした？</p>
-              <%= key.text_area "how", value: parsed_content["how"], class: "input input-bordered w-[60%]" %>
-              
-              <br><br>
-              まとめ・気付き(*)<br><p class="text-gray-400">自分の言葉で書き出してみよう</p>
-              <%= key.text_area "summary", value: parsed_content["summary"], class: "input input-bordered h-40 w-[60%]" %>
+              <%= link_to "入力内容を確認する", "#", class: "btn btn-error" %>
             <% end %>
-            
-            <br><br>
-            <%= link_to "入力内容を確認する", "#", class: "btn btn-error" %>
-          <% end %>
 
+          </div>
         </div>
       </div>
-    </div>
 
-    <!-- 右側カード表示 -->
-    <div class="grid gap-4 w-full md:w-1/3 p-4">
-      <div class="card shadow w-full">
-        <div class="card-body my-2" style="transform: scale(0.95);">
-          <h2 class="card-title"><i class="fa-solid fa-1"></i>感情を選ぶ</h2>
-          <p><br>記録したい出来事に対する<br>感情を選択しましょう。</p>
+      <!-- 右側カード表示 -->
+      <div class="grid gap-4 w-full md:w-1/3 p-4">
+        <div class="card shadow w-full">
+          <div class="card-body my-2" style="transform: scale(0.95);">
+            <h2 class="card-title">
+              <i class="fa-solid fa-1"></i> <!-- 「1」 -->
+              <!-- 「感情を選ぶ」 -->
+              <%= t('memos._example.choice') %>
+            </h2>
+            <!-- 「…感情を選択しましょう。」 -->
+            <br><%= simple_format(t('memos._example.description_1')) %>
+          </div>
+        </div>
+        <div class="card shadow w-full">
+          <div class="card-body my-2" style="transform: scale(0.95);">
+            <h2 class="card-title">
+              <i class="fa-solid fa-2"></i> <!-- 「2」 -->
+              <!-- 「詳細を入力」 -->
+              <%= t('memos._example.detail') %>
+            </h2>
+            <!-- 「フォームに沿って…記録します」 -->  
+            <br><%= simple_format(t('memos._example.description_2_1')) %>
+          </div>
+        </div>
+        <div class="card shadow w-full">
+          <div class="card card-body my-2" style="transform: scale(0.95);">
+            <!-- 「…掘り下げて…見つめ直します」 -->
+            <br><%= simple_format(t('memos._example.description_2_2')) %>
+          </div>
+        </div>
+        <div class="card shadow w-full">
+          <div class="card-body my-2" style="transform: scale(0.95);">
+            <h2 class="card-title">
+              <i class="fa-solid fa-3"></i> <!-- 「3」 -->
+              <!-- 「まとめ」 -->
+              <%= t('memos._example.summary') %>
+            </h2>
+            <!-- 「自分なりの…。…つながるかもしれません。」 -->
+            <br><%= simple_format(t('memos._example.description_3').strip) %>
+            <i class="fa-solid fa-seedling"></i>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="card shadow w-full">
-        <div class="card-body my-2" style="transform: scale(0.95);">
-          <h2 class="card-title"><i class="fa-solid fa-2"></i>詳細を入力</h2>
-          <p><br>フォームに沿って<br>出来事の詳細を記録します。</p>
-        </div>
-      </div>
-      <div class="card shadow w-full">
-        <div class="card card-body my-2" style="transform: scale(0.95);">
-          <p><br>「なぜ？」を掘り下げて<br>自身の考えを見つめ直します。</p>
-        </div>
-      </div>
-      <div class="card shadow w-full">
-        <div class="card-body my-2" style="transform: scale(0.95);">
-          <h2 class="card-title"><i class="fa-solid fa-3"></i>まとめ</h2>
-          <p><br>
-            自分なりの答えや気づきを<br>記録しましょう。<br><br>
-            思考整理や新たな発見に<br>つながるかもしれません<i class="fa-solid fa-seedling"></i>
-          </p>
-        </div>
-      </div>
-    </div>
 
     </div>
   </div>
