add: 確認、編集、一覧、新規作成画面を翻訳登録

--- a/app/views/memos/confirm.html.erb
+++ b/app/views/memos/confirm.html.erb
@@ -1,12 +1,13 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:text-center">
-      <% content_for :title, "入力内容確認" %>
+      <% content_for :title,  t('.title') %>
       <br><br><br>
       <%= form_with model: @memo, url: memos_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
           <br>
-          この内容でよろしいですか？
+          <!-- この内容でよろしいですか？ -->
+          <%= t('.is_ok?') %>
           <br><br>
         <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
           <br>
@@ -18,7 +19,7 @@
 
           <br><br>
           <div class="text-gray-400">
-          いつ（When）<br>
+          <%= t('.when') %>（When）<br>
           </div>
           <div class="font-extrabold">
           <%= @memo.date %>
@@ -28,7 +29,8 @@
           <br><br>
           <%= f.fields_for :memo_content do |key| %>
             <div class="text-gray-400">
-            何（What）<br>
+            <!-- 何 -->
+            <%= t('.what') %>（What）<br>
             </div>
             <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["what"] %>
@@ -37,7 +39,8 @@
 
             <br><br>
             <div class="text-gray-400">
-            なぜ(Why)<br>
+            <!-- なぜ -->
+            <%= t('.why') %>(Why)<br>
             </div>
             <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["why"] %>
@@ -46,7 +49,8 @@
             
             <br><br>
             <div class="text-gray-400">
-            なぜをもっと深掘り<br>
+            <!-- なぜをもっと深掘り -->
+            <%= t('.why_more') %><br>
             </div>
             <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["why_more"] %>
@@ -55,7 +59,8 @@
 
             <br><br>
             <div class="text-gray-400">
-            どのように(How)<br>
+            <!-- どのように -->
+            <%= t('.how') %>(How)<br>
             </div>
             <div class="font-extrabold">
             <%= JSON.parse(@memo.memo_content)["how"] %>
@@ -64,7 +69,8 @@
             
             <br><br>
             <div class="text-gray-400">
-            まとめ・気付き<br>
+            <!-- まとめ・気付き -->
+            <%= t('.summary') %><br>
             </div>
             <div class="font-extrabold">
             <%= simple_format JSON.parse(@memo.memo_content)["summary"] %>
@@ -73,7 +79,7 @@
           <% end %>
 
         <br><br><br>
-          <%= f.submit "メモ保存", class: "btn btn-error" %>
+          <%= f.submit t('.save'), class: "btn btn-error" %>
           <br>
         <% end %>
         <br>
