--- a/app/views/memos/index.html.erb
+++ b/app/views/memos/index.html.erb
@@ -42,7 +42,7 @@
                 <% end %>
 
                 <!-- アイコン：削除 -->
-                <%= link_to memo_path(memo), data: { turbo_method: :delete, turbo_confirm: "本当に削除しますか？\n\n※このメモが連続記録日数に含まれている場合、\n　記録が途切れる可能性があります。" }, class: "mx-2" do %>
+                <%= link_to memo_path(memo), data: { turbo_method: :delete, turbo_confirm: t('.caution') }, class: "mx-2" do %>
                   <i class="fa-solid fa-trash"></i>
                 <% end %>
               </div>
