--- a/app/views/memos/show.html.erb
+++ b/app/views/memos/show.html.erb
@@ -26,74 +26,8 @@
 
       <%= form_with model: @memo, url: memos_path, local: true do |f| %>
         <%= render 'shared/error_messages', object: f.object %>
-        <div class="bg-[#f4f4f4] rounded-lg p-6"> <!-- 角丸と背景色 -->
-          <br>
-          <br>
-          <div class="badge badge-error badge-outline badge-lg w-full max-w-xs">
-          <%= @memo.emotion == "happy" ? "嬉しかったこと・いいね" : @memo.emotion %>
-          </div>
-          <%= f.hidden_field :emotion, value: @memo.emotion %>
-
-          <br><br><br>
-          <div class="text-gray-400">
-          <%= t('.when') %>（When）<br>
-          </div>
-          <div class="font-extrabold">
-          <%= @memo.date %>
-          </div>
-          <%= f.hidden_field :date, value: @memo.date %>
-
-          <br><br>
-          <%= f.fields_for :memo_content do |key| %>
-            <div class="text-gray-400">
-            <!-- 何 -->
-            <%= t('.what') %>（What）<br>
-            </div>
-            <div class="font-extrabold">
-            <%= JSON.parse(@memo.memo_content)["what"] %>
-            </div>
-            <%= key.hidden_field 'what', value: JSON.parse(@memo.memo_content)["what"] %>
-
-            <br><br>
-            <div class="text-gray-400">
-            <!-- なぜ -->
-            <%= t('.why') %>(Why)<br>
-            </div>
-            <div class="font-extrabold">
-            <%= JSON.parse(@memo.memo_content)["why"] %>
-            </div>
-            <%= key.hidden_field 'why', value: JSON.parse(@memo.memo_content)["why"] %>
-            
-            <br><br>
-            <div class="text-gray-400">
-            <!-- なぜをもっと深掘り -->
-            <%= t('.why_more') %><br>
-            </div>
-            <div class="font-extrabold">
-            <%= JSON.parse(@memo.memo_content)["why_more"] %>
-            </div>
-            <%= key.hidden_field 'why_more', value: JSON.parse(@memo.memo_content)["why_more"] %>
-
-            <br><br>
-            <div class="text-gray-400">
-            <!-- どのように -->
-            <%= t('.how') %>(How)<br>
-            </div>
-            <div class="font-extrabold">
-            <%= JSON.parse(@memo.memo_content)["how"] %>
-            </div>
-            <%= key.hidden_field 'how', value: JSON.parse(@memo.memo_content)["how"] %>
-            
-            <br><br>
-            <div class="text-gray-400">
-            <!-- まとめ・気付き -->
-            <%= t('.summary') %><br>
-            </div>
-            <div class="font-extrabold">
-            <%= simple_format JSON.parse(@memo.memo_content)["summary"] %>
-            </div>
-            <%= key.hidden_field 'summary', value: JSON.parse(@memo.memo_content)["summary"] %>
-          <% end %>
+        <!-- フォームの内容 -->
+        <%= render 'memo_content', f: f %>
         <% end %>
         <br>
       </div>
