fix: 重複したリンクを削除

--- a/app/views/shared/privacy_policy.html.erb
+++ b/app/views/shared/privacy_policy.html.erb
@@ -1,3 +1,5 @@
+<div class="bg-white py-24 sm:py-32">
+  <div class="mx-auto max-w-4xl">
 プライバシーポリシー<br><br>
 
 お客様から取得する情報<br>
@@ -42,3 +44,5 @@
   この場合、必ず、運転免許証のご提示等運営者が指定する方法により、ご本人からのご請求であることの確認をさせていただきます。なお、情報の開示請求については、開示の有無に関わらず、ご申請時に一件あたり1,000円の事務手数料を申し受けます。<br><br>
 
 2024年12月27日制定
+  </div>
+</div>
