--- a/app/views/shared/terms_of_service.html.erb
+++ b/app/views/shared/terms_of_service.html.erb
@@ -1,3 +1,5 @@
+<div class="bg-white py-24 sm:py-32">
+  <div class="mx-auto max-w-4xl">
 利用規約<br><br>
 
 この利用規約（以下，「本規約」といいます。）は，Memo Sprout（以下，「本アプリ」といいます。）がこのウェブサイト上で提供するサービス（以下，「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下，「ユーザー」といいます。）には，本規約に従って，本サービスをご利用いただきます。<br><br>
@@ -87,3 +89,5 @@
 ・本サービスに関して紛争が生じた場合には，本アプリの本店所在地を管轄する裁判所を専属的合意管轄とします。<br><br>
 
 以上
+  </div>
+</div>
