--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,22 +1,21 @@
 {
   "name": "MemoSprout",
+  "short_name": "MemoSprout",
+  "theme_color": "#3E6607",
+  "background_color": "#FFFEFC",
+  "display": "standalone",
+  "start_url": "/",
+  "scope": "/",
   "icons": [
     {
-      "src": "/icon.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/icon.svg",
+      "sizes": "192x192",
+      "type": "image/svg+xml"
     },
     {
-      "src": "/icon.png",
-      "type": "image/png",
+      "src": "/icon.svg",
       "sizes": "512x512",
-      "purpose": "maskable"
+      "type": "image/svg+xml"
     }
-  ],
-  "start_url": "/",
-  "display": "standalone",
-  "scope": "/",
-  "description": "MemoSprout.",
-  "theme_color": "red",
-  "background_color": "red"
+  ]
 }
