--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,6 +1,6 @@
 <div class="bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
-    <div class="mx-auto max-w-2xl lg:text-center">
+    <div class="mx-auto max-w-2xl text-center">
       <% content_for :title %><br>
 
       <div class="mt-6 text-lg leading-8 text-gray-600">
