--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -8,14 +8,19 @@
       <% end %>
 
       <!-- 記録して振り返り、思考を育てる（モバイル非表示） -->
-      <h2 class="text-sm leading-8 text-gray-900 whitespace-nowrap hidden sm:block">- <%= t('shared._header_before_login.catchphrase') %> -</h2>
+      <h2 class="text-base leading-8 text-gray-900 whitespace-nowrap hidden sm:block">
+        - <%= t('shared._header_before_login.catchphrase') %> -
+      </h2>
     </div>
-    <div class="flex-none  ml-auto">
-      <ul class="menu menu-horizontal px-1">
-        <li><%= link_to t('shared._header_before_login.login'), "/" %></li>
+
+    <div class="ml-auto">
+      <ul class="menu menu-horizontal px-1 flex-none">
+        <li class="text-xs sm:text-base px-2 sm:px-4">
+          <%= link_to t('shared._header_before_login.login'), "/" %>
+        </li>
         <li>
           <details class="relative"> <!-- relative：子要素の絶対位置を指定 -->
-            <summary>Menu</summary>
+            <summary class="text-xs sm:text-base px-2 sm:px-4">Menu</summary>
           <ul class="bg-base-100 rounded-t-none p-2 w-44 min-w-max absolute right-0">
               <li>
                 <div class="tooltip tooltip-left" data-tip="ログイン後に使える機能です">
