update: Topページ ヘッダーのログインボタンをアンカーリンクに変更

--- a/app/views/shared/_header_before_login.html.erb
+++ b/app/views/shared/_header_before_login.html.erb
@@ -16,7 +16,7 @@
     <div class="ml-auto">
       <ul class="menu menu-horizontal px-1 flex-none">
         <li class="text-xs sm:text-base px-2 sm:px-4">
-          <%= link_to t('shared._header_before_login.login'), "/" %>
+          <%= link_to t('shared._header_before_login.login'), '#login-section' %>
         </li>
         <li>
           <details class="relative"> <!-- relative：子要素の絶対位置を指定 -->
