--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -14,6 +14,8 @@
   </div>
 </div>
 
+<div id="login-section">  <!-- アンカー -->
+</div><!-- アンカー終了 -->
 <% if current_user.nil? %> <!-- ログインしていない場合に表示 -->
   <div class="hero bg-base-200 h-5/6">
     <div class="hero-content flex-col lg:flex-row-reverse">
