--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,14 +39,16 @@
   </head>
 
   <body>
-    <% if logged_in? %>
-      <%= render "shared/header" %>
-    <% else %>
-      <%= render "shared/header_before_login" %>
-    <% end %>
-    <div class="h-20"></div>
-    <%= render "shared/flash_message" %>
-    <%= yield %>
-    <%= render "shared/footer" %>
+    <body class="bg-base-200">
+      <% if logged_in? %>
+        <%= render "shared/header" %>
+      <% else %>
+        <%= render "shared/header_before_login" %>
+      <% end %>
+      <div class="h-20"></div>
+      <%= render "shared/flash_message" %>
+      <%= yield %>
+      <%= render "shared/footer" %>
+    </body>
   </body>
 </html>
