--- a/app/views/memos/new.html.erb
+++ b/app/views/memos/new.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white py-24 sm:py-32">
+<div class="py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl text-center">
       <% content_for :title, t('.title') %>
